Network_Policies/Deny_all_traffic_ns.yaml
# Deny both Ingress & Egress traffic in a Namespace
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-traffic-devp
  namespace: development
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
